--- a/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Resources/SharedResource.resx
+++ b/Frontend/src/Client/WSBInvestmentPredictor.Frontend.Shared/Resources/SharedResource.resx
@@ -423,4 +423,115 @@
   <data name="Saving" xml:space="preserve">
     <value>Saving...</value>
   </data>
+
+  <!-- Categories translations -->
+  <data name="CategoriesConfiguration" xml:space="preserve">
+    <value>Categories Configuration</value>
+  </data>
+  <data name="Category" xml:space="preserve">
+    <value>Category</value>
+  </data>
+  <data name="Actions" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="SaveChanges" xml:space="preserve">
+    <value>Save Changes</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="AddCategory" xml:space="preserve">
+    <value>Add Category</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>Add</value>
+  </data>
+  <data name="ErrorLoadingData" xml:space="preserve">
+    <value>Error loading data</value>
+  </data>
+  <data name="ApplyRules" xml:space="preserve">
+    <value>Apply Rules</value>
+  </data>
+  <data name="Success" xml:space="preserve">
+    <value>Success</value>
+  </data>
+  <data name="RulesAppliedSuccessfully" xml:space="preserve">
+    <value>Rules applied successfully</value>
+  </data>
+  <data name="ErrorApplyingRules" xml:space="preserve">
+    <value>Error applying rules</value>
+  </data>
+  <data name="CategorizeTransactions" xml:space="preserve">
+    <value>Categorize Transactions</value>
+  </data>
+  <data name="NoUncategorizedTransactions" xml:space="preserve">
+    <value>No uncategorized transactions found</value>
+  </data>
+  <data name="SelectCategory" xml:space="preserve">
+    <value>Select Category</value>
+  </data>
+  <data name="AddRule" xml:space="preserve">
+    <value>Add Rule</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="ErrorSavingRule" xml:space="preserve">
+    <value>Error saving rule</value>
+  </data>
+  <data name="ErrorDeletingRule" xml:space="preserve">
+    <value>Error deleting rule</value>
+  </data>
+  <data name="EditRule" xml:space="preserve">
+    <value>Edit Rule</value>
+  </data>
+  <data name="FieldIsRequired" xml:space="preserve">
+    <value>This field is required</value>
+  </data>
+  <data name="CategoryNameTooLong" xml:space="preserve">
+    <value>Category name cannot be longer than 100 characters</value>
+  </data>
+  <data name="CategoryDescriptionTooLong" xml:space="preserve">
+    <value>Description cannot be longer than 500 characters</value>
+  </data>
+  <data name="KeywordTooLong" xml:space="preserve">
+    <value>Keyword cannot be longer than 200 characters</value>
+  </data>
+  <data name="CategoryIsRequired" xml:space="preserve">
+    <value>Category is required</value>
+  </data>
+  <data name="YouMustSelectCategory" xml:space="preserve">
+    <value>You must select a category</value>
+  </data>
+
+  <!-- Category Analysis translations -->
+  <data name="CategoryAnalysis" xml:space="preserve">
+    <value>Category Analysis</value>
+  </data>
+  <data name="NoDataForAnalysis" xml:space="preserve">
+    <value>No data available for analysis</value>
+  </data>
+  <data name="Transactions" xml:space="preserve">
+    <value>transactions</value>
+  </data>
+
+  <!-- New translations -->
+  <data name="FieldType" xml:space="preserve">
+    <value>Field Type</value>
+  </data>
+  <data name="FieldTypeTitle" xml:space="preserve">
+    <value>Transaction Title</value>
+  </data>
+  <data name="FieldTypeCounterparty" xml:space="preserve">
+    <value>Transaction Counterparty</value>
+  </data>
+  <data name="SelectFieldType" xml:space="preserve">
+    <value>Select field type</value>
+  </data>
 </root> 
